--- a/css/main.css
+++ b/css/main.css
@@ -4,37 +4,80 @@
    Author's custom styles
    ========================================================================== */
 
-/* center the lis in the navbar: */
+/*navbar*/
 
-.navbar .nav,
-.navbar .nav > li {
-    float:none;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-    *zoom:1; /* hasLayout ie7 trigger */
-    vertical-align: top;
+	/* OBSOLETE center the <li>s in the navbar: */
+
+	.navbar .nav,
+	.navbar .nav > li {
+	    float:none;
+	    display:inline-block;
+	    *display:inline; /* ie7 fix */
+	    *zoom:1; /* hasLayout ie7 trigger */
+	    vertical-align: top;
+	}
+
+
+	#navbar {
+		text-align: center;
+	}
+
+/* ---- place navbar at bottom of jumbotron ----*/
+
+	.jumbotron {
+		position: relative;
+		margin-top: 0;
+		height: 400px;
+	}
+
+	.jumbotron nav {
+		width: 100%;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		margin-bottom: 0;
+	}
+/*---- end place navbar at bottom ----*/
+
+
+/* navbar styles */
+
+.navbar li {
+	
 }
 
-#navbar {
-	text-align: center;
-}
-
-/* place navbar at bottom of jumbotron */
+/* jumbotron/header styles */
 
 .jumbotron {
-	position: relative;
-	margin-top: 0;
+	background: url("../img/box.jpg") no-repeat center;
+	background-size: cover;
+	margin-bottom: 1px;
 }
 
-.jumbotron nav {
-	width: 100%;
-	position: absolute;
-	bottom: 0;
-	right: 0;
-	margin-bottom: 0;
+.jumbotron h1, .jumbotron p{
+	color: ghostwhite;
 }
 
 
+
+
+/* +++++++ MEDIA QUERIES +++++++++ */
+
+@media only screen and (max-width: 700px){
+	
+	.jumbotron {
+		height: 300px;
+	}
+
+}
+
+@media only screen and (max-width: 500px){
+	
+	.jumbotron {
+		height: 200px;
+	}
+
+}
 
 
 
