--- a/css/main.css
+++ b/css/main.css
@@ -64,11 +64,38 @@
 	text-align: left;
 }
 
-/*------*/
-.square {
-	width: 200px;
-	height: 200px;
-	background-color: orange;
+.instawidget {
+	margin-top: 15px;
+
+}
+/*---widget---*/
+
+/*-----carousel------*/
+
+#myCarousel {
+   margin-top: 60px;
+}
+
+.carousel-caption {
+   font-size: 24px;
+}
+
+.carousel-caption h4 {
+   font-size: 32px;
+}
+
+#myCarousel .item {
+   height: 400px;
+}
+
+#slide1 {
+   background: url(../img/carousel/infield.jpg) center no-repeat;
+}
+#slide2 {
+   background: url(../img/carousel/cereal.jpg) center no-repeat;
+}
+#slide3 {
+   background: url(../img/carousel/muddle.jpg) bottom no-repeat;
 }
 
 
@@ -77,9 +104,8 @@
 /* FOOTER */
 
 footer {
-	background-color: lightgrey;
-	position: absolute;
-	bottom: 0;
+	
+	
 }
 
 
