--- a/css/main.css
+++ b/css/main.css
@@ -145,7 +145,9 @@
 }
 
 
-/* FOOTER */
+/* sticky FOOTER */
+
+
 
 html {
 	position: relative;
@@ -153,7 +155,7 @@ html {
 }
 
 body {
-	margin-bottom: 325px;
+	margin-bottom: 580px;
 }
 
 footer {
@@ -161,7 +163,7 @@ footer {
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 325px;
+	height: 580px;
 	margin: 20px 0 0 0;
 	background-color: #f5f5f5;
 	overflow: hidden;
