--- a/css/main.css
+++ b/css/main.css
@@ -113,35 +113,35 @@
 }
 
 #slide1 {
-   background: url(../img/carousel/infield.jpg) center no-repeat;
+   background: url(../img/carousel/gbs/infield-med.jpg) center no-repeat;
 }
 #slide2 {
-   background: url(../img/carousel/cereal.jpg) center no-repeat;
+   background: url(../img/carousel/gbs/cereal-med.jpg) center no-repeat;
 }
 #slide3 {
-   background: url(../img/carousel/muddle.jpg) bottom no-repeat;
+   background: url(../img/carousel/gbs/muddle-med.jpg) bottom no-repeat;
 }
 /*__________carousel 2 items___________*/
 #second-slide1{
-	background: url(../img/carousel/fridgetams.jpg) center no-repeat;	
+	background: url(../img/carousel/tams/fridgetams.jpg) center no-repeat;	
 }
 #second-slide2{
-	background: url(../img/carousel/yellow-tams.jpg) center no-repeat;
+	background: url(../img/carousel/tams/yellow-tams.jpg) center no-repeat;
 }
 
 #second-slide3{
-	background: url(../img/carousel/gold-tams.jpg) center no-repeat;
+	background: url(../img/carousel/tams/gold-tams.jpg) center no-repeat;
 }
 
 #third-slide1{
-	background: url(../img/carousel/green-pfruit.jpg) center no-repeat;	
+	background: url(../img/carousel/passion/green-pfruit.jpg) center no-repeat;	
 }
 #third-slide2{
-	background: url(../img/carousel/yellow-tams.jpg) center no-repeat;
+	background: url(../img/carousel/passion/yellow-tams.jpg) center no-repeat;
 }
 
 #third-slide3{
-	background: url(../img/carousel/gold-tams.jpg) center no-repeat;
+	background: url(../img/carousel/passion/gold-tams.jpg) center no-repeat;
 }
 
 
@@ -180,10 +180,9 @@ footer ul.social {
 	color: white;
 }
 
-.footerwidget {
-
+footer i {
+	color: black;
 }
-
 
 
 
@@ -230,6 +229,53 @@ footer ul.social {
 		margin-top: 10px;
 	}
 
+
+}
+
+/* CAROUSEL MEDIA QUERIES FOR IMAGES */
+
+@media (max-width: 768px) {
+	
+      #myCarousel .item {
+         height: 310px;
+      }
+
+   #slide1 {
+   background: url(../img/carousel/gbs/infield-sm.jpg) center no-repeat;
+}
+#slide2 {
+   background: url(../img/carousel/gbs/cereal-sm.jpg) center no-repeat;
+}
+#slide3 {
+   background: url(../img/carousel/gbs/muddle-sm.jpg) bottom no-repeat;
+}
+
+      .carousel-caption {
+         font-size: 16px;
+      }
+
+      .carousel-caption h4 {
+         font-size: 22px;
+      }
+
+
+}
+
+/* Large desktop */
+@media (min-width: 1200px) {
+      #myCarousel .item {
+         height: 500px;
+      }
+
+    #slide1 {
+   background: url(../img/carousel/gbs/infield.jpg) center no-repeat;
+}
+#slide2 {
+   background: url(../img/carousel/gbs/cereal.jpg) center no-repeat;
+}
+#slide3 {
+   background: url(../img/carousel/gbs/muddle.jpg) bottom no-repeat;
+}
 
 }
 
