--- a/css/main.css
+++ b/css/main.css
@@ -123,25 +123,25 @@
 }
 /*__________carousel 2 items___________*/
 #second-slide1{
-	background: url(../img/carousel/tams/fridgetams.jpg) center no-repeat;	
+	background: url(../img/carousel/tams/fridgetams-med.jpg) center no-repeat;	
 }
 #second-slide2{
-	background: url(../img/carousel/tams/yellow-tams.jpg) center no-repeat;
+	background: url(../img/carousel/tams/orange-tams-med.jpg) center no-repeat;
 }
 
 #second-slide3{
-	background: url(../img/carousel/tams/gold-tams.jpg) center no-repeat;
+	background: url(../img/carousel/tams/yellow-tams-med.jpg) center no-repeat;
 }
 
 #third-slide1{
-	background: url(../img/carousel/passion/green-pfruit.jpg) center no-repeat;	
+	background: url(../img/carousel/passion/flower-med.jpg) center no-repeat;	
 }
 #third-slide2{
-	background: url(../img/carousel/passion/yellow-tams.jpg) center no-repeat;
+	background: url(../img/carousel/passion/mixed-med.jpg) center no-repeat;
 }
 
 #third-slide3{
-	background: url(../img/carousel/passion/gold-tams.jpg) center no-repeat;
+	background: url(../img/carousel/passion/tendril-med.jpg) top no-repeat;
 }
 
 
@@ -234,14 +234,14 @@ footer i {
 
 /* CAROUSEL MEDIA QUERIES FOR IMAGES */
 
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
 	
-      #myCarousel .item {
-         height: 310px;
-      }
+#myCarousel .item {
+	height: 310px;
+}
 
-   #slide1 {
-   background: url(../img/carousel/gbs/infield-sm.jpg) center no-repeat;
+#slide1 {
+ background: url(../img/carousel/gbs/infield-sm.jpg) center no-repeat;
 }
 #slide2 {
    background: url(../img/carousel/gbs/cereal-sm.jpg) center no-repeat;
@@ -258,23 +258,67 @@ footer i {
          font-size: 22px;
       }
 
-
+#second-slide1{
+	background: url(../img/carousel/tams/fridgetams-sm.jpg) center no-repeat;	
 }
+#second-slide2{
+	background: url(../img/carousel/tams/orange-tams-sm.jpg) center no-repeat;
+}
+
+#second-slide3{
+	background: url(../img/carousel/tams/yellow-tams-sm.jpg) center no-repeat;
+}
+
+#third-slide1{
+	background: url(../img/carousel/passion/flower-sm.jpg) center no-repeat;	
+}
+#third-slide2{
+	background: url(../img/carousel/passion/mixed-sm.jpg) center no-repeat;
+}
+
+#third-slide3{
+	background: url(../img/carousel/passion/tendril-sm.jpg) top no-repeat;
+}
+
+} /* end media query for small screens */
 
 /* Large desktop */
-@media (min-width: 1200px) {
-      #myCarousel .item {
-         height: 500px;
-      }
+@media only screen and (min-width: 1200px) {
 
-    #slide1 {
-   background: url(../img/carousel/gbs/infield.jpg) center no-repeat;
+		#myCarousel .item {
+		    height: 500px;
+		 }
+
+		#slide1 {
+		   background: url(../img/carousel/gbs/infield.jpg) center no-repeat;
+		}
+		#slide2 {
+		   background: url(../img/carousel/gbs/cereal.jpg) center no-repeat;
+		}
+		#slide3 {
+		   background: url(../img/carousel/gbs/muddle.jpg) bottom no-repeat;
+		}
+
+		#second-slide1{
+			background: url(../img/carousel/tams/fridgetams.jpg) center no-repeat;	
+		}
+		#second-slide2{
+			background: url(../img/carousel/tams/orange-tams.jpg) center no-repeat;
+		}
+
+		#second-slide3{
+			background: url(../img/carousel/tams/yellow-tams.jpg) center no-repeat;
+		}
+
+		#third-slide1{
+	background: url(../img/carousel/passion/flower.jpg) center no-repeat;	
 }
-#slide2 {
-   background: url(../img/carousel/gbs/cereal.jpg) center no-repeat;
+#third-slide2{
+	background: url(../img/carousel/passion/mixed.jpg) center no-repeat;
 }
-#slide3 {
-   background: url(../img/carousel/gbs/muddle.jpg) bottom no-repeat;
+
+#third-slide3{
+	background: url(../img/carousel/passion/tendril.jpg) top no-repeat;
 }
 
 }
